# NeSyCat.AI.PyTorch

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: binary.py  mnist_addition.py  mnist_multidigit.py  wap.py
muller/: __init__.py  dispatch.py  metrics.py  training.py
muller/logic/: __init__.py  boolean.py  signature.py  tensor_bool.py
muller/monad/: __init__.py  bridge.py  dist.py  donotation.py  interpretation.py  logtens.py  logvec.py  monad.py
nesycat/torch/: __init__.py  dispatch.py  training.py
nesycat/torch/logic/: boolean.py  signature.py  tensor_bool.py
nesycat/torch/monad/: __init__.py  dist.py  donotation.py  interpretation.py  logtens.py
test/: test_binary_smoke.py  test_dist.py  test_logic.py  test_logvec.py  test_mnist_smoke.py  test_multidigit_smoke.py  test_wap_smoke.py
