[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nesycat-torch"
version = "0.1.0"
description = "A PyTorch implementation of the NeSyCat Torch neurosymbolic framework."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pymc>=5.25.1",
    "scipy>=1.16.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nesycat*"]

[dependency-groups]
dev = [
    "coverage>=7.10.1",
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # Pyflakes
    "I",  # isort
]
ignore = [

]

[[tool.mypy.overrides]]
module = ["pymc.*", "scipy.*", "numpy.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["nesycat"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

